# zoo_vision

./: .gitattributes  .gitignore  README.md  activate_ros.sh  install_deps.sh  make_env.sh  project_root.py  requirements.txt  requirements.yml
data/: config.json  zoo_vision.rbl
labeller/: __main__.py  background_segmenter.py  database.py  image_label.py  main_window.py  mark_canvas.py  motion_detector.py  motion_detector_ui.py  names.json  serialization.py  side_menu.py
models/camera0/segmentation/saved_model/: saved_model.pb
models/camera0/segmentation/saved_model/variables/: variables.data-00000-of-00001  variables.index
scripts/: make_rr_blueprint.py  pretty_segmentation_images.py
scripts/calibration/: calib_utils.py  camera_calib_2d.ipynb  camera_constraints.yaml  floor_plan_calibration.ipynb  select_camera_constraints.ipynb
scripts/datasets/: browse_dataset.ipynb  build_coco.ipynb  identity_from_detection_ds.py  make_human_editable.py  project_root.py  propagate_masks.py  propagate_test.ipynb  segmentation_utils.py
training/: coco_only_elephant.ipynb  compile_all_models.py  examin_pytorch.ipynb  examine_camera.ipynb  examine_model.ipynb  floor_plan.ipynb  optimization_helpers.py
training/detection/: README.md  dataset_test.ipynb  engine.py
training/identity/: README.md  identity_playground.ipynb  train.py
training/model/: browse_dataset.ipynb  coco_utils.py  dataset_test.ipynb  presets.py  train.py
training/sam2_mask_propagation/: build_coco.ipynb  propagate_masks.py  propagate_test.ipynb
zoo-vision-ros2/src/zoo_vision/: CMakeLists.txt  package.xml
zoo-vision-ros2/src/zoo_vision/include/zoo_vision/: rerun_forwarder.hpp  zoo_camera.hpp
zoo-vision-ros2/src/zoo_vision/src/: main.cpp  rerun_forwarder.cpp  zoo_camera.cpp
zoo-vision-ros2/src/zoo_vision_py/: setup.cfg
zoo_vision_ros2/: setup.sh
zoo_vision_ros2/src/: fast_dds_config.xml
zoo_vision_ros2/src/zoo_msgs/: CMakeLists.txt
zoo_vision_ros2/src/zoo_msgs/msg/: BoundingBox2D.msg  Detection.msg  PointCloud1m.msg  PointCloud2m.msg  PointCloud4m.msg  PointCloud512k.msg  PointCloud8k.msg  PointCloud8m.msg  PointField.msg
zoo_vision_ros2/src/zoo_vision/: CMakeLists.txt
zoo_vision_ros2/src/zoo_vision/include/zoo_vision/: identifier.hpp  json_eigen.hpp  rerun_forwarder.hpp  segmenter.hpp  timings.hpp  track_matcher.hpp  utils.hpp  zoo_camera.hpp
zoo_vision_ros2/src/zoo_vision/src/: identifier.cpp  main.cpp  rerun_forwarder.cpp  segmenter.cpp  track_matcher.cpp  utils.cpp  zoo_camera.cpp
zoo_vision_ros2/src/zoo_vision_py/: package.xml  setup.py
zoo_vision_ros2/src/zoo_vision_py/zoo_vision_py/: rerun_forwarder.py
zoo_vision_ros2/src/zoo_vision_rs/: Cargo.toml  package.xml
zoo_vision_ros2/src/zoo_vision_rs/src/: rerun_forwarder.rs  zoo_config.rs  zoo_vision_rs.rs
