[package]
name = "zoo_vision_rs"
version = "0.1.0"
authors = ["Daniel Herrera C <daniel.herrera.castro@gmail.com>"]
edition = "2021"

[lib]
name = "zoo_vision_rs"
path = "src/zoo_vision_rs.rs"
crate-type = ["staticlib"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
builtin_interfaces = "*"


[dependencies.rclrs]
version = "0.4"

[dependencies.rosidl_runtime_rs]
version = "0.4"

[dependencies.sensor_msgs]
version = "*"

[dependencies.zoo_msgs]
version = "*"

[dependencies.libc]
version = "*"

[dependencies.rerun]
version = "0.21.0"
features = ["web_viewer"]